fix/align-pagination (#279)